--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ FIREBASE_PROJECT_ID=taskmaster-b63d8
 FIREBASE_STORAGE_BUCKET=taskmaster-b63d8.firebasestorage.app
 FIREBASE_MESSAGING_SENDER_ID=328452627014
 FIREBASE_APP_ID=1:328452627014:web:8cefeb92614d54aed78847
+IMGBB_API_KEY=5729755a91d2006b103bc300a8ab124e
