--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 # Firebase Configuration
-FIREBASE_API_KEY=your_api_key_here
-FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
-FIREBASE_DATABASE_URL=https://your_project.firebaseio.com
-FIREBASE_PROJECT_ID=your_project_id
-FIREBASE_STORAGE_BUCKET=your_project.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-FIREBASE_APP_ID=your_app_id
+FIREBASE_API_KEY=your-api-key
+FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+FIREBASE_DATABASE_URL=https://your-project.firebaseio.com
+FIREBASE_PROJECT_ID=your-project-id
+FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=your-sender-id
+FIREBASE_APP_ID=your-app-id
 
 # ImgBB API Key
-IMGBB_API_KEY=your_imgbb_api_key 
+IMGBB_API_KEY=your-imgbb-api-key
+
+# Optional Configuration
+TASKMASTER_CREDENTIALS_PATH=C:/path/to/your/secure/credentials
